force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/sugati__Supplier_Bank_Detail__c.object-meta.xml
<CustomObject>
    <description>A list of bank details used by suppliers</description>
    <label>Supplier Bank Detail</label>
    <nameField>
        <displayFormat>SBD-{0000000000}</displayFormat>
        <label>Supplier Bank Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Bank Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>