force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Account_Number__c</fullName>
    <label>Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>