force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Amount__c</fullName>
    <label>Amount:</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>