force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Bank_Account__c</fullName>
    <label>Bank Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Swift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>