force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Dep_Rule__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Dep_Rule__c</fullName>
    <label>Dep Rule:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-None</fullName>
            </value>
            <value>
                <fullName>1-At Conf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>