force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_IBAN__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_IBAN__c</fullName>
    <label>IBAN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>