force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Office_Copy__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Office_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Office Copy</label>
    <type>Checkbox</type>
</CustomField>