force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Owners_EM__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Owners_EM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owners (EM)</label>
    <type>Checkbox</type>
</CustomField>