force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Owners_W__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Owners_W__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owners (W)</label>
    <type>Checkbox</type>
</CustomField>