force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Payment_From_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Payment_From_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment From Bank Account</label>
    <referenceTo>sugati__Bank_Account__c</referenceTo>
    <relationshipLabel>Supplier Bank Details</relationshipLabel>
    <relationshipName>Supplier_Bank_Details</relationshipName>
    <type>Lookup</type>
</CustomField>