force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Payment_Instruction__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Payment_Instruction__c</fullName>
    <label>Payment Instruction</label>
    <length>250</length>
    <type>Text</type>
</CustomField>