force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>