force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Primary__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>