force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Remittance_Comments__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Remittance_Comments__c</fullName>
    <label>Remittance Comments</label>
    <type>TextArea</type>
</CustomField>