force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Sort_Code__c</fullName>
    <label>Sort Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>