force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Specific_date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Specific_date__c</fullName>
    <label>Specific date</label>
    <type>Date</type>
</CustomField>