force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_State_County__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_State_County__c</fullName>
    <label>State/County</label>
    <length>200</length>
    <type>Text</type>
</CustomField>