force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Supplier Bank Details</relationshipLabel>
    <relationshipName>Supplier_Bank_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>