force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Supplier_Comments__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Supplier_Comments__c</fullName>
    <label>Supplier Comments</label>
    <type>TextArea</type>
</CustomField>