force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Supply_type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Supply_type__c</fullName>
    <label>Supply type:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acting as Agent (Y/N)</fullName>
            </value>
            <value>
                <fullName>AAA Name</fullName>
            </value>
            <value>
                <fullName>Output Serv Val on Rem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>