force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_Web_Remittance_Y_N__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_Web_Remittance_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web Remittance Y/N</label>
    <type>Checkbox</type>
</CustomField>