force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SBD_XE_Recipient_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBD_XE_Recipient_Id__c</fullName>
    <label>XE Recipient Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>