force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SDB_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__SDB_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>