force-app/main/default/objects/sugati__Supplier_Bank_Detail__c/fields/sugati__SDB_Primary_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__SDB_Primary_Bank_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This is the bank account that we would normally sent the money to.</inlineHelpText>
    <label>Supplier Primary Bank Account</label>
    <type>Checkbox</type>
</CustomField>